# sensor_hub_client

./: .clang-format  .env  .gitignore  CMakeLists.txt  README.md  client.py  package.xml  test.py
launch/: client.launch
msgs/: MockRobotControl.msg  MockRobotState.msg  TcpRobotControl.msg  TcpRobotState.msg
refer/: client_debug.py
src/: common.cpp  common.h  crc.cpp  crc.h  main.cpp  packet_parser.h  sensor_hub_client.cpp  sensor_hub_client.h  tcp_pack.cpp  tcp_pack.h  tcp_stream.cpp  tcp_stream.h
